# JniProjectCmakeYinSanFang

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jniprojectcmake/: MainActivity.java  Util.java
app/src/main/jni/: com_jniprojectcmake_Util.h  testJni.c
app/src/main/jni/sanfang/: com_testJni_Util.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
